--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,7 @@
 @import "./accordionMenu.css";
 @import "./btoPrograms.css";
 @import "./aboutUs.css";
+@import "./slider.css";
 @import "./mediaScreen.css";
 
 /* fonts */
