--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,7 @@
 @import "./btoPrograms.css";
 @import "./aboutUs.css";
 @import "./slider.css";
+@import "./quotations.css";
 @import "./mediaScreen.css";
 
 /* fonts */
